# Multiple_AV

./: .gitignore  README.md
Monaco/: Monaco.world  Readme.txt
ackermann_vehicle-1-master/ackermann_vehicle_description/pista/: model.config  model.sdf
ackermann_vehicle-1-master/ackermann_vehicle_description/urdf/: em_3905.urdf.xacro
ackermann_vehicle-1-master/ackermann_vehicle_gazebo/: CMakeLists.txt  package.xml
ackermann_vehicle-1-master/ackermann_vehicle_gazebo/config/: em_3905_ackermann_ctrlr_params.yaml
ackermann_vehicle-1-master/ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch  ackermann_vehicle_simulator.launch
ackermann_vehicle-1-master/ackermann_vehicle_gazebo/scripts/: ackermann_controller
ackermann_vehicle-1-master/ackermann_vehicle_gazebo/src/: ackermann_vehicle_gazebo.cpp  tf_generator3.cpp
comm_tcp-master/: CMakeLists.txt
comm_tcp-master/src/: server_node.cpp
free_space_detection/config/: rviz.rviz
free_space_detection/include/free_space_detection/: free_space_detection.h
free_space_detection/launch/: free_space.launch  robotmodel.launch
free_space_detection/src/: device_frame_publisher.cpp  free_space_detection.cpp
free_space_detection/urdf/: ATLCASCAR2.gv  atlas2.urdf
gazebo_simulator/ackermann_vehicle/: model.config  model.sdf
gazebo_simulator/atlas/: model.config  model.sdf
gazebo_simulator/pista_l/: model.config  model.sdf
gazebo_simulator/tutorials/: model.config  model.sdf
joint_state_publisher/: CMakeLists.txt
joint_state_publisher/joint_state_publisher/: joint_state_publisher
joint_state_publisher/test/: ATLASCAR2.urdf  joint_state_atlas.launch
lartk5/perception/planarobstacles/mtt/src/: gnn.cpp  mtt_kalman.cpp
lartk5/planning/trajectory_planner/: CMakeLists.txt
lartk5/planning/trajectory_planner/config/: rviz_DLO.rviz  rviz_simulator.rviz
lartk5/planning/trajectory_planner/include/trajectory_planner/: APgenerator.h  c_manage_trajectory.h  c_trajectory.h  trajectory_planner_nodelet.h
lartk5/planning/trajectory_planner/src/: APgenerator.cpp  APsimulator.cpp  APwaypoints.cpp  RetrieveInfo.cpp  XeY10.csv  XeY100.csv  XeY1000.csv  a.out  c_manage_trajectory.cpp  c_trajectory.cpp  editCsv.cpp  editCsv.py  editFileWaypoints.cpp  how to use waypoints.txt  mtt_target_generator.cpp  tf_generator.cpp  tf_generator2.cpp  tracking_frame_generator.cpp  trajectory_planner_nodelet.cpp
lartk5/planning/trajectory_planner/src/csv/: .~lock.analysis_data.csv#  analysis_data.csv  speed.csv
lartk5/planning/trajectory_planner/src/csv/USED/: detect_obst.csv  detect_obst_total.csv  dist_ap_speed.csv  dist_ap_speed_mean.csv  graph_Dist_front_back.csv  graph_cruzamento.csv  graph_max_angle_vel.csv  graph_max_angle_vel_without.csv  graph_overtaking_3_vehicles.csv  graph_ultrapassagem.csv  hist_AP.csv  hist_ang.csv  ultrapassado.csv  ultrapassagem_3_v.csv
lartk5/planning/trajectory_planner/src/csv/ana_data/: DS.csv  traj_data_no_ang.csv  traj_data_with_Ang.csv
lartk5/utils/: index.html.tmp  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D
lartk5/utils/kfilter/samples/MFile/: index.html.tmp
lartk5/utils/tcp_client/: index.html.tmp  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D
lidar_segmentation/include/lidar_segmentation/: lidar_segmentation.h  visualization_rviz.h
local_path_planning/: CMakeLists.txt  package.xml
local_path_planning/config/: rvizcentroid.rviz  rvizfull.rviz
local_path_planning/include/local_path_planning/: aux_func.h  local_path_planning.h
local_path_planning/launch/: get_data.launch  local_planning.launch  robotmodel.launch
local_path_planning/src/: local_path_planning.cpp
local_path_planning/urdf/: atlas2.urdf
sick_ldmrs/: CMakeLists.txt  package.xml
steer_drive/: README.md
steer_drive/cirkit_unit03_control/config/: cirkit_unit03_steer_drive_controller_gazebo.yaml
steer_drive/cirkit_unit03_control/launch/: control_gazebo.launch
steer_drive/cirkit_unit03_description/meshes/cirkit_unit03/: collision_small.STL  collision_small.dae
steer_drive/cirkit_unit03_description/urdf/: cirkit_unit03.xacro  cirkit_unit03_macro.xacro  materials.xacro
steer_drive/cirkit_unit03_gazebo/: CMakeLists.txt  package.xml
steer_drive/cirkit_unit03_gazebo/cfg/: MyParams.cfg
steer_drive/cirkit_unit03_gazebo/config/: cirkit_unit03_hardware_gazebo.yaml  param.yaml
steer_drive/cirkit_unit03_gazebo/doc/fig/: .index.php  index.html.tmp
steer_drive/cirkit_unit03_gazebo/launch/: ackermann_single_model.launch  ackermann_vehicle_pari.launch  ackermann_vehicle_simulator.launch  cirkit_unit03_clearpath_playpen.launch  cirkit_unit03_world_old.launch  crossing.launch  description.gazebo.launch  overtaking.launch  overtaking_2_vehicles.launch  overtaking_3_vehicles_left_lane.launch  overtaking_curve.launch  triple_overtaking.launch
steer_drive/cirkit_unit03_gazebo/src/: Dynamic_params.cpp  ackermann_vehicle_gazebo.cpp  ackermann_vehicle_gazebo_line.cpp  combiner.cpp  laser_link_generator.cpp  line_link_generator.cpp  tf_generator4.cpp
steer_drive/cirkit_unit03_gazebo/urdf/: cirkit_unit03.gazebo.xacro  description.gazebo.xacro
steer_drive/lower_step_detector-master/: CMakeLists.txt  README.md  package.xml
steer_drive/lower_step_detector-master/config/: lower_step_detector.yaml
steer_drive/lower_step_detector-master/doc/matlab/: sensor_range.m
steer_drive/lower_step_detector-master/doc/ppt/: lower_step_dtector_figures.pptx
steer_drive/lower_step_detector-master/launch/: lower_step_detector_demo.launch
steer_drive/lower_step_detector-master/rviz/: 20151008_autorun_test.rviz  20151009_autorun_test_revised.rviz
steer_drive/lower_step_detector-master/scripts/: lower_step_detector.py
steer_drive/lower_step_detector-master/test/: lower_step_detector_demo_launch.test.xml  lower_step_detector_launch.test.xml
steer_drive/steer_bot_hardware_gazebo/src/: steer_bot_hardware_gazebo.cpp
steer_drive/steer_drive_controller/src/: steer_drive_controller.cpp
(+83 files in other folders)
