<?xml version="1.0"?>
<package>
  <name>cirkit_unit03_gazebo</name>
  <version>0.1.0</version>
  <description>The cirkit_unit03_gazebo package</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <maintainer email="k104073r@mail.kyutech.jp">Ryodo Tanaka</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/CIR-KIT-Unit03/cirkit_unit03_gazebo.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT-Unit03/cirkit_unit03_gazebo/issues</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_genaration</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>lidar_segmentation</build_depend>
  <build_depend>colormap</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>xacro</build_depend>
  
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>ackermann_vehicle_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_genaration</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>lidar_segmentation</run_depend>
  <run_depend>colormap</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>cmake_modules</run_depend>
  
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
</package>
