<?xml version="1.0"?>
<package format="2">
  <name>lower_step_detector</name>
  <version>0.1.0</version>
  <description>The lower_step_detector package</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
